@@ -17,7 +17,7 @@ Breaking API Changes
   * finagle-mux: `c.t.f.mux.lease.exp.WindowedByteCounter` no longer
     calls `Thread.start()` in its constructor. This should be now be
     done by the caller.
-    
+
   * finagle-mux: The experimental session API was discontinued.
 
   * finagle-mux: Introduce new Request and Response types for mux services.
@@ -32,6 +32,12 @@ Breaking API Changes
 
   * finagle-thriftmux: `c.t.f.ThriftMux.Client` now has its `ClientId`
     configured via a `c.t.f.thrift.param.ClientId` `Stack.Param`.
+
+Runtime Behavior Changes
+~~~~~~~~~~~~~~~~~~~~~~~~
+
+  * finagle-mux: Mark the ServiceFactory available again if the underlying
+    Service is no longer available.  This permits it to be closed and reused.
 
 Deprecations
 ~~~~~~~~~~~~
